[gd_scene load_steps=9 format=3 uid="uid://cv3wdi32c0ebx"]

[ext_resource type="Script" path="res://game_scripts/main_scene.gd" id="1_7ejtj"]
[ext_resource type="PackedScene" uid="uid://d2ejeopkwpq4v" path="res://game_scenes/circle.tscn" id="2_j15p0"]
[ext_resource type="PackedScene" uid="uid://c4h62qi2jin2v" path="res://game_scenes/cross.tscn" id="3_7h4kg"]
[ext_resource type="PackedScene" uid="uid://5igls0srjode" path="res://game_scenes/board.tscn" id="4_tf8a4"]
[ext_resource type="FontFile" uid="uid://cslrf3qfio6w7" path="res://assets/Merathus.ttf" id="5_0gxca"]
[ext_resource type="PackedScene" uid="uid://bygt3711hnbse" path="res://game_scenes/main_game_over.tscn" id="6_nbdtu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4fju6"]
bg_color = Color(0.172802, 0.687037, 0.629089, 1)
border_width_left = 5
border_color = Color(0.0885599, 0.0885599, 0.0885598, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jhyj4"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.803922, 0.803922, 0.803922, 0.729412)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.129558, 0.129558, 0.129558, 0.6)
shadow_size = 4
shadow_offset = Vector2(3, 4)

[node name="Main_Scene" type="Node"]
script = ExtResource("1_7ejtj")
circle_scene = ExtResource("2_j15p0")
cross_scene = ExtResource("3_7h4kg")

[node name="Board" parent="." instance=ExtResource("4_tf8a4")]
position = Vector2(300, 300)

[node name="SidePanel" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 600)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4fju6")
metadata/_edit_lock_ = true

[node name="PlayerPanel" type="Panel" parent="."]
top_level = true
anchors_preset = -1
anchor_left = 0.731111
anchor_top = 0.556667
anchor_right = 0.953333
anchor_bottom = 0.89
theme_override_styles/panel = SubResource("StyleBoxFlat_jhyj4")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Label" type="Node" parent="."]

[node name="PlayerLabel" type="Label" parent="Label"]
anchors_preset = -1
anchor_left = 0.673333
anchor_top = 0.21
anchor_right = 1.00111
anchor_bottom = 0.451667
offset_right = -6.10352e-05
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("5_0gxca")
theme_override_font_sizes/font_size = 90
text = "Next"
horizontal_alignment = 1
autowrap_mode = 3
uppercase = true
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="PlayerLabel2" type="Label" parent="Label"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -295.0
offset_top = 208.0
offset_bottom = -249.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("5_0gxca")
theme_override_font_sizes/font_size = 90
text = "Player"
horizontal_alignment = 1
autowrap_mode = 3
uppercase = true
metadata/_edit_lock_ = true

[node name="game_over" parent="." instance=ExtResource("6_nbdtu")]
unique_name_in_owner = true
process_mode = 2
visible = false

[node name="Panel" parent="game_over/GameOver" index="0"]
modulate = Color(1, 1, 1, 0.917647)

[connection signal="pressed" from="game_over/GameOver/Panel/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="game_over/GameOver/Panel/Retry" to="." method="_on_retry_pressed"]

[editable path="game_over"]
